# mpc-neural-surrogates

./: .gitattributes  .gitignore  CLAUDE.md  Notes.md  README.md  pyproject.toml
Data_Sampling/analysis/: pca.py
Data_Sampling/sampling/: dataset_utils.py  narx_dataset_creator.py  narx_subsampler_dataset.py  thermal_cobr_sampling.py
Data_Sampling/sampling/configs/: thermal_cobr_config.yaml  thermal_cobr_sampling_config.yaml  thermal_narx_dataset_config.yaml
MSA_NARX_MPC/mpc/: MPC_MSA_NARX.ipynb  mpc_msa_utils.py
MSA_NARX_MPC/quantile/: MSA_NARX_quantile_pipeline.ipynb  msa_quantile_helpers.py
Run_1/helpers/: helpers_details.md
SS_NARX_MPC/mpc/: MPC_SO_NARX.ipynb
SS_NARX_MPC/training/: SO_NARX_pipeline.ipynb
SS_NARX_MPC/training/helpers/: helper_classes.py  helpers.py
SS_NARX_MPC/uq/: covariance.py  train_variance_head.py  uq_band.py  variance_head.py
TiDE_MPC/training/: TiDE_implementation.md  TiDE_pipeline.ipynb
TiDE_MPC/training/helpers/: TiDE_helpers.py
common/: __init__.py  closed_loop.py  mpc_common.py  plant_interface.py  plotting.py
common/plant/: base_cobr_model.py  dual_population_crystallization_model.py  literature_crystallization_model.py  pbe_crystallization_model.py
common/plant/configs/: kdp_dual_population_cooling_config.yaml  kdp_literature_cooling_config.yaml  kdp_pbe_cooling_config.yaml  thermal_cobr_config_legacy.yaml
common/plant/do-crystal/do-crystal/PBE_sol/: PBE.py  cryst.py  functions.py
common/shared_helpers/: helper_classes_MSA.py  helpers_MSA.py
tests/: test_closed_loop_smoke.py  test_plant_interface.py
