[project]
name = "thesis_env"
version = "0.1.0"
description = "Student handover package: COBR KDP models, sampling, and surrogate tooling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "casadi",
    "do-mpc",
    "filelock",
    "h5py",
    "ipykernel>=7.2.0",
    "matplotlib",
    "numpy",
    "pandas",
    "pytorch-lightning",
    "pyyaml",
    "scienceplots",
    "scikit-learn",
    "scipy",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.5",
    "torch",
    "torch-pca",
    "tqdm",
    "l4casadi",
    "jupyter>=1.1.1",
    "pip>=26.1.2",
]

[tool.uv]
package = false
no-build-isolation-package = ["l4casadi"]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'win32'" },
]
